--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,22 @@ body {
 a {
   color: #00B7FF;
 }
+
+.message-container{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.message{
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  padding: 10px;
+  background-color: lightblue;
+  max-width: 300px;
+}
+
+.added{
+  font-size: 10px;
+}
+
