--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,3 +25,26 @@ a {
   font-size: 10px;
 }
 
+
+.message-form{
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  padding: 10px;
+  background-color: lightblue;
+  max-width: 300px;
+  gap: 10px;
+}
+
+a.button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+
+  text-decoration: none;
+  color: initial;
+  margin-top: 10px;
+  padding: 10px;
+  border-style: solid;
+  background-color: lightblue;
+}
