--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,7 +8,7 @@
     <h1><%= title %></h1>
     <form method="POST" action="/new" class="message-form">
         <label for="messageText">Message: <input type="text" name="messageText" maxlength="500" required></label>
-        <label for="username">Username: <input type="text" name="username" maxlength="500"></label>
+        <label for="username">Username: <input type="text" name="username" maxlength="500" required></label>
         <button type="submit">Submit</button>
      </form>
   </body>
