--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 10px;
+  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: lightblue;
 }
 
 a {
@@ -16,35 +17,33 @@ a {
   display: flex;
   flex-direction: column;
   border-style: solid;
+  border-radius: 20px;
   padding: 10px;
-  background-color: lightblue;
-  max-width: 300px;
+  background-color: white;
+  max-width: 600px;
+  min-width: 300px;
+  font-size: 32px;
 }
 
 .added{
-  font-size: 10px;
+  font-size: 14px;
+  color: grey;
 }
 
+.user{
+  text-align: end;
+  font-size: 24px;
+}
 
 .message-form{
   display: flex;
   flex-direction: column;
   border-style: solid;
   padding: 10px;
-  background-color: lightblue;
-  max-width: 300px;
+  background-color: white;
+  max-width: 600px;
   gap: 10px;
-}
-
-a.button {
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
-
-  text-decoration: none;
-  color: initial;
-  margin-top: 10px;
-  padding: 10px;
-  border-style: solid;
-  background-color: lightblue;
+  margin-bottom: 50px;
+  min-width: 300px;
+  border-radius: 20px;
 }
