--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,20 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body id="message-body">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <form method="POST" action="/new" class="message-form">
+      <label for="messageText">Message: <input type="text" id="messageText" name="messageText" maxlength="500" required></label>
+      <label for="username">Username: <input type="text" id="username" name="username" maxlength="500" required></label>
+      <button type="submit">Submit</button>
+   </form>
       <div class="message-container">
-        <% messages.forEach((message) => { %>
+        <% messages.slice().reverse().forEach((message) => { %>
 
           <div class="message">
               <span class="text">
@@ -23,6 +29,6 @@
           </div>
       <%});%>
       </div>
-      <a href="/new/" class="button">New Message</a>
+
   </body>
 </html>
