--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <form method="POST" action="/new" class="message-form">
       <label for="messageText">Message: <input type="text" id="messageText" name="messageText" maxlength="500" required></label>
       <label for="username">Username: <input type="text" id="username" name="username" maxlength="500" required></label>
-      <button type="submit">Submit</button>
+      <button type="submit">Send</button>
    </form>
       <div class="message-container">
         <% messages.slice().reverse().forEach((message) => { %>
